--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -4,6 +4,8 @@
 		<p>
 			This is a home page. <br /> It shall contains some descriptions.<br />
 			And it hasn't been done yet.
+			<br />
+			Built on: 2015.07.03
 		</p>
 		<p>
 			<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
