Using VS2013, try I.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -154,8 +154,8 @@
 	                    <li class="dropdown" dropdown>
 		                	<a role="button" class="dropdown-toggle" dropdown-toggle>Languages<b class="caret"></b></a>
 							<ul class="dropdown-menu">
+                                <li><a href="">¼òÌåÖĞÎÄ</a></li>
 								<li><a href="">English</a></li>
-								<li><a href="">Chinese</a></li>
 							</ul>
 						</li>
 	                    <li class="dropdown" dropdown>
