--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -5,7 +5,8 @@
 			This is a home page. <br /> It shall contains some descriptions.<br />
 			And it hasn't been done yet.
 			<br />
-			Built on: 2015.07.03
+            <br />
+			The running version built on: 2015.07.04
 		</p>
 		<p>
 			<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
