--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -5,68 +5,143 @@
 		</h2>
 	</div>
 
-	<form class="form-horizontal" role="form" name="frmObj">
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptID">ID:</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" id="iptID"
-					readonly="readonly" placeholder="ID" ng-model="DocumentID">
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptType">Doc. Type:</label>
-			<div class="col-sm-10">
-				<ui-select ng-model="DocumentType.selected" theme="select2"  search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-			    	<ui-select-match placeholder="Select a category via the name...">{{$select.selected.text}}</ui-select-match>
-			    	<ui-select-choices repeat="doctype in AllDocumentTypes">
-			      		<div ng-bind-html="doctype.name | highlight: $select.search"></div>
-			      		<small>
-			      			ID: {{acntctgy.id}} <br />			      			
-			        		Name: <span ng-bind-html="''+acntctgy.name | highlight: $select.search"></span>
-			      		</small>
-			    	</ui-select-choices>
-				</ui-select>
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptType">Currency:</label>
-			<div class="col-sm-10">
-				<ui-select ng-model="Currency.selected" theme="select2"  search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-			    	<ui-select-match placeholder="Select a category via the name...">{{$select.selected.text}}</ui-select-match>
-			    	<ui-select-choices repeat="curr in AllCurrencies">
-			      		<div ng-bind-html="curr.name | highlight: $select.search"></div>
-			      		<small>
-			      			ID: {{acntctgy.id}} <br />			      			
-			        		Name: <span ng-bind-html="''+acntctgy.name | highlight: $select.search"></span>
-			      		</small>
-			    	</ui-select-choices>
-				</ui-select>
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptName">Name</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
-					placeholder="Name" ng-model="AccountName" required>
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptContent">Comment</label>
-			<div class="col-sm-10">
-				<textarea rows="20" ng-readonly="isReadonly"
-					ng-model="AccountComment"></textarea>
-			</div>
-		</div>
+    <ul class="nav nav-tabs">
+        <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true">Header</a></li>
+        <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false">Items</a></li>
+    </ul>
 
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-					ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
-				<button class="btn btn-danger" ng-click="close()">Cancel</button>
-			</div>
-		</div>
-	</form>
+    <!-- Header -->
+    <div class="container" ng-show="showhdr">
+        <form class="form-horizontal" role="form" name="frmObj">
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptID">ID:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="iptID"
+                           readonly="readonly" placeholder="ID" ng-model="DocumentID">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptType">Doc. Type:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="DocumentType.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a document type via the name...">{{$select.selected.name}}</ui-select-match>
+                        <ui-select-choices repeat="doctype in AllDocumentTypes">
+                            <div ng-bind-html="doctype.name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{doctype.id}} <br />
+                                Name: <span ng-bind-html="''+doctype.name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptCurr">Currency:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="Currency.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.name}}</ui-select-match>
+                        <ui-select-choices repeat="curr in AllCurrencies">
+                            <div ng-bind-html="curr.name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{curr.curr}} <br />
+                                Name: <span ng-bind-html="''+curr.name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptDate">Date</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentDate" is-open="isDateOpened"
+                           datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                    </span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptAmount">Amount</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" id="iptAmount" ng-readonly="isReadonly"
+                           placeholder="Amount" ng-model="DocumentAmount" required>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptDesp">Desp</label>
+                <div class="col-sm-10">
+                    <textarea rows="20" ng-readonly="isReadonly"
+                              ng-model="DocumentDesp"></textarea>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
+                            ng-disabled="frmObj.$invalid || !frmObj.$dirty">
+                        Submit
+                    </button>
+                    <button class="btn btn-danger" ng-click="close()">Cancel</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <!-- Items -->
+    <div class="container" ng-show="!showhdr">
+        <div class="btn-group" role="group" aria-label="Items Operation">
+            <button type="button" class="btn btn-default">Add Item</button>
+            <button type="button" class="btn btn-default">Delete Item</button>
+        </div>
+
+        <table st-table="ItemsCollection" class="table table-striped">
+            <thead>
+                <tr>
+                    <th st-sort="acntid">Account ID</th>
+                    <th st-sort="acntname">Account Name</th>
+                    <th st-sort="ctgyName">Category Name</th>
+                    <th st-sort="Name">Name</th>
+                    <th st-sort="content">Content</th>
+                </tr>
+                <tr>
+                    <th colspan="6">
+                        <input st-search="" class="form-control"
+                               placeholder="global search ..." type="text" />
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="row in displayedCollection">
+                    <td>{{row.id}}</td>
+                    <td>{{row.categoryid}}</td>
+                    <td>{{row.categoryname}}</td>
+                    <td>{{row.name}}</td>
+                    <td>{{row.content}}</td>
+                    <td>
+                        <div class="btn-group" role="group">
+                            <button type="button" ng-click="displayItem(row)"
+                                    class="btn-group btn-primary" role="group">
+                                <i class="glyphicon glyphicon-share"> </i>
+                            </button>
+                            <button type="button" ng-click="editItem(row)"
+                                    class="btn-group btn-warning" role="group">
+                                <i class="glyphicon glyphicon-edit"> </i>
+                            </button>
+                            <button type="button" ng-click="removeItem(row)"
+                                    class="btn-group btn-danger" role="group">
+                                <i class="glyphicon glyphicon-trash"> </i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
 </div>
+
