--- a/app/views/financedocumentlist.html
+++ b/app/views/financedocumentlist.html
@@ -56,5 +56,7 @@
 					<div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
 				</td>
 			</tr>
-		</tfoot>	</table>
+		</tfoot>	
+    </table>
 </div>
+
