--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -9,7 +9,7 @@
     <div class="form-group">
     	<div class="col-sm-10">
         	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-            			ng-disabled="frmObj.$invalid || !frmObj.$dirty || ItemsChanged">Submit</button>
+            		ng-disabled="frmObj.$invalid || !frmObj.$dirty || ItemsChanged">Submit</button>
             <button class="btn btn-danger" ng-click="close()">Cancel</button>
         </div>
     </div>
@@ -26,14 +26,14 @@
                 <label class="control-label col-sm-2" for="iptID">ID:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptID"
-                           readonly="readonly" placeholder="ID" ng-model="DocumentID">
+                           readonly="readonly" placeholder="ID" ng-model="DocumentHeader.DocumentID">
                 </div>
             </div>
 
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptType">Doc. Type:</label>
                 <div class="col-sm-10">
-                    <ui-select ng-model="DocumentType.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select ng-model="DocumentHeader.DocumentType.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                         <ui-select-match placeholder="Select a document type via the name...">{{$select.selected.name}}</ui-select-match>
                         <ui-select-choices repeat="doctype in AllDocumentTypes">
                             <div ng-bind-html="doctype.name | highlight: $select.search"></div>
@@ -49,7 +49,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptCurr">Currency:</label>
                 <div class="col-sm-10">
-                    <ui-select ng-model="Currency.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select ng-model="DocumentHeader.Currency.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                         <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.name}}</ui-select-match>
                         <ui-select-choices repeat="curr in AllCurrencies">
                             <div ng-bind-html="curr.name | highlight: $select.search"></div>
@@ -65,7 +65,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDate">Date</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentDate" is-open="isDateOpened"
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentHeader.DocumentDate" is-open="isDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -77,14 +77,14 @@
                 <label class="control-label col-sm-2" for="iptAmount">Amount</label>
                 <div class="col-sm-10">
                     <input type="number" class="form-control" id="iptAmount" ng-readonly="isReadonly"
-                           placeholder="Amount" ng-model="DocumentAmount" required>
+                           placeholder="Amount" ng-model="DocumentHeader.DocumentAmount" required>
                 </div>
             </div>
 
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDesp">Desp</label>
                 <div class="col-sm-10">
-                    <textarea rows="5" columns="50" ng-readonly="isReadonly" ng-model="DocumentDesp"></textarea>
+                    <textarea rows="5" columns="50" ng-readonly="isReadonly" ng-model="DocumentHeader.DocumentDesp"></textarea>
                 </div>
             </div>
     </div>
@@ -92,7 +92,7 @@
     <!-- Items -->
     <div class="container" ng-show="!showhdr">        
         <div class="btn-group" role="group" aria-label="Items Operation">
-            <button type="button" class="btn btn-default" ng-disabled="isReadonly">Add Item</button>
+            <button type="button" class="btn btn-default" ng-disabled="isReadonly" ng-click="addDocItem()">Add Item</button>
             <button type="button" class="btn btn-default" ng-disabled="isReadonly">Delete Items</button>
         </div>
 
@@ -110,8 +110,7 @@
                 </tr>
                 <tr>
                     <th colspan="9">
-                        <input st-search="" class="form-control"
-                               placeholder="global search ..." type="text" />
+                        <input st-search="" class="form-control" placeholder="global search ..." type="text" />
                     </th>
                 </tr>
             </thead>
@@ -128,15 +127,14 @@
                     <td>{{row.desp}}</td>
                     <td>
                         <div class="btn-group" role="group">
-                            <button type="button" ng-click="displayItem(row)" ng-disabled="isReadonly¡°
-                                    class="btn-group btn-primary" role="group">
+                            <button type="button" ng-click="displayItem(row)" class="btn-group btn-primary" role="group">
                                 <i class="glyphicon glyphicon-share"> </i>
                             </button>
-                            <button type="button" ng-click="editItem(row)" ng-disabled="isReadonly¡°
+                            <button type="button" ng-click="editItem(row)" ng-disabled="isReadonly"
                                     class="btn-group btn-warning" role="group">
                                 <i class="glyphicon glyphicon-edit"> </i>
                             </button>
-                            <button type="button" ng-click="removeItem(row)" ng-disabled="isReadonly¡°
+                            <button type="button" ng-click="removeItem(row)" ng-disabled="isReadonly"
                                     class="btn-group btn-danger" role="group">
                                 <i class="glyphicon glyphicon-trash"> </i>
                             </button>
