--- a/app/views/financedocumentlist.html
+++ b/app/views/financedocumentlist.html
@@ -53,7 +53,7 @@
 		<tfoot>
 			<tr>
 				<td colspan="5" class="text-center">
-					<div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
+					<div st-pagination="" st-items-by-page="itemsByPage"></div>
 				</td>
 			</tr>
 		</tfoot>	
