--- a/app/views/home.html
+++ b/app/views/home.html
@@ -115,14 +115,18 @@
 	                        <ul class="dropdown-menu">
 	                            <li><a ui-sref="home.learn.object.list">Learn Object</a></li>
 								<li><a ui-sref="home.learn.history.list">Learn History</a></li>
-								<li><a ui-sref="home.learn.award.list">Learn Award</a></li>                            
+								<li><a ui-sref="home.learn.award.list">Learn Award</a></li>
 	                        </ul>
 	                    </li>
 	                    <li class="dropdown" dropdown>
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle>Finance<b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
-	                            <li><a ui-sref="home.finance.account.list">Finance Account</a></li>
-								<li><a ui-sref="home.finance.document.list">Finance Document</a></li>
+	                            <li><a ui-sref="home.finance.accountcategory.list">Account Category List</a></li>
+								<li><a ui-sref="home.finance.documenttype.list">Document Type List</a></li>
+								<li><a ui-sref="home.finance.transactiontype.list">Transaction Type List</a></li>
+								<li role="separator" class="divider"></li>
+	                            <li><a ui-sref="home.finance.account.list">Account List</a></li>
+								<li><a ui-sref="home.finance.document.list">Document List</a></li>
 	                        </ul>
 	                    </li>
 	                    <li class="dropdown" dropdown>
@@ -154,7 +158,7 @@
 	                    <li class="dropdown" dropdown>
 		                	<a role="button" class="dropdown-toggle" dropdown-toggle>Languages<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-                                <li><a href="">¼òÌåÖÐÎÄ</a></li>
+                                <li><a href="">ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½</a></li>
 								<li><a href="">English</a></li>
 							</ul>
 						</li>
