--- a/app/views/financecurrencylist.html
+++ b/app/views/financecurrencylist.html
@@ -1,8 +1,8 @@
-<div id="viewFinanceDocumentTypeList">
+<div id="viewCurrencyList">
 
 	<div class="page-header">
 		<h2>
-			Finance Document Type <small> List View </small>
+			Currency <small> List View </small>
 		</h2>
 	</div>
 
@@ -10,9 +10,9 @@
 		class="table table-striped">
 		<thead>
 			<tr>
-				<th st-sort="id">ID</th>
+				<th st-sort="curr">Currency</th>
 				<th st-sort="name'">Name</th>
-				<th st-sort="Comment"> Name</th>
+				<th st-sort="symbol">Symbol</th>
 			</tr>
 			<tr>
 				<th colspan="3"><input st-search="" class="form-control" placeholder="global search ..." type="text" /></th>
@@ -20,9 +20,9 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in displayedCollection">
-				<td>{{row.id}}</td>
+				<td>{{row.curr}}</td>
 				<td>{{row.name}}</td>
-				<td>{{row.comment}}</td>
+				<td>{{row.symbol}}</td>
 			</tr>
 		</tbody>
 	</table>
