--- a/app/views/financetransactiontypelist.html
+++ b/app/views/financetransactiontypelist.html
@@ -11,23 +11,21 @@
 		<thead>
 			<tr>
 				<th st-sort="id">ID</th>
-				<th st-sort="ctgyid'">Category ID</th>
-				<th st-sort="ctgyname">Category Name</th>
-				<th st-sort="name">Name</th>
-				<th st-sort="assetflag">Asset Flag</th>
+				<th st-sort="name'">Name</th>
+				<th st-sort="expenseflag">Expense</th>
+				<th st-sort="parent">Parent ID</th>
 				<th st-sort="comment">Comment</th>
 			</tr>
 			<tr>
-				<th colspan="7"><input st-search="" class="form-control" placeholder="global search ..." type="text" /></th>
+				<th colspan="5"><input st-search="" class="form-control" placeholder="global search ..." type="text" /></th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in displayedCollection">
 				<td>{{row.id}}</td>
-				<td>{{row.ctgyid}}</td>
-				<td>{{row.ctgyname}}</td>
 				<td>{{row.name}}</td>
-				<td>{{row.assetflag}}</td>
+				<td>{{row.expense}}</td>
+				<td>{{row.parent}}</td>
 				<td>{{row.comment}}</td>
 			</tr>
 		</tbody>
