Working with Code.
Change-Id: I7a26675d74fa6a0f8f9cedf3270bb1e3d968bee1
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/financeaccountlist.html
+++ b/app/views/financeaccountlist.html
@@ -12,7 +12,7 @@
 		<thead>
 			<tr>
 				<th st-sort="id">ID</th>
-				<th st-sort="ctgyid'">Category ID</th>
+				<th st-sort="ctgyid">Category ID</th>
 				<th st-sort="ctgyname">Category Name</th>
 				<th st-sort="name">Name</th>
 				<th st-sort="assetflag">Asset Flag</th>
