--- a/app/views/financecurrencylist.html
+++ b/app/views/financecurrencylist.html
@@ -11,7 +11,7 @@
 		<thead>
 			<tr>
 				<th st-sort="curr">Currency</th>
-				<th st-sort="name'">Name</th>
+				<th st-sort="name">Name</th>
 				<th st-sort="symbol">Symbol</th>
 			</tr>
 			<tr>
