--- a/app/views/financedocumentlist.html
+++ b/app/views/financedocumentlist.html
@@ -12,7 +12,7 @@
 		<thead>
 			<tr>
 				<th st-sort="docid">Doc ID</th>
-				<th st-sort="doctypename'">Doc Type</th>
+				<th st-sort="doctypename">Doc Type</th>
 				<th st-sort="trandate">Tran Date</th>
 				<th st-sort="trancurr">Currency</th>
 				<th st-sort="trancurrname">Currency</th>
