--- a/app/views/financedocumenttypelist.html
+++ b/app/views/financedocumenttypelist.html
@@ -11,7 +11,7 @@
 		<thead>
 			<tr>
 				<th st-sort="id">ID</th>
-				<th st-sort="name'">Name</th>
+				<th st-sort="name">Name</th>
 				<th st-sort="Comment"> Name</th>
 			</tr>
 			<tr>
