--- a/app/views/financeaccount.html
+++ b/app/views/financeaccount.html
@@ -34,15 +34,15 @@
 			<label class="control-label col-sm-2" for="iptName">Name</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
-					placeholder="Name" ng-model="AccountName" required>
+						placeholder="Name" ng-model="AccountName" required>
 			</div>
 		</div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptContent">Comment</label>
 			<div class="col-sm-10">
-				<textarea rows="5" ng-readonly="isReadonly"
-					ng-model="AccountComment"></textarea>
+				<textarea rows="5" ng-readonly="isReadonly" id="iptContent"
+							ng-model="AccountComment"></textarea>
 			</div>
 		</div>
 
