Prepare for multiple language supports
Change-Id: Ia95a9b4451573be491af575bb9d318c18e789f11
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -113,6 +113,8 @@
 	                    <li class="dropdown" dropdown>
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle>Learning<b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
+	                            <li><a ui-sref="home.learn.category.list">Learn Category</a></li>
+								<li role="separator" class="divider"></li>
 	                            <li><a ui-sref="home.learn.object.list">Learn Object</a></li>
 								<li><a ui-sref="home.learn.history.list">Learn History</a></li>
 								<li><a ui-sref="home.learn.award.list">Learn Award</a></li>
@@ -139,6 +141,7 @@
 								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li>
 								<li><a target="_blank" href="http://www.tinymce.com/">Select2</a></li>
 								<li><a target="_blank" href="http://www.jquery.com/">jQuery</a></li>
+								<li><a target="_blank" href="http://i18next.com/">i18next</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
@@ -146,10 +149,15 @@
 								<li><a target="_blank" href="http://angular-ui.github.io/ui-router/">UI-Router</a></li>
 								<li><a target="_blank" href="https://github.com/angular-ui/ui-tinymce">UI-tinymce</a></li>
 								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI Select</a></li>
+								<li><a target="_blank" href="https://github.com/i18next/ng-i18next">ng-i18next</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">CDNs</li>
 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
-								<li><a href="">One more separated link</a></li>
+								<li role="separator" class="divider"></li>
+								<li class="dropdown-header">Others</li>
+								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">Themes</a></li>
+								<li><a target="_blank" href="http://www.jstree.com/"></a>jsTree</li>
+								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
 	                        </ul>
 	                    </li>
 	                    <li><a href="#/about">About</a></li>
@@ -163,13 +171,13 @@
 								<li><a href="">English</a></li>
 							</ul>
 						</li>
-	                    <li class="dropdown" dropdown>
+	                    <!--<li class="dropdown" dropdown>
 		                	<a role="button" class="dropdown-toggle" dropdown-toggle>Themes<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="">Default</a></li>
 								<li><a href="">More to come...</a></li>
 							</ul>
-						</li>
+						</li>-->
 					</ul>	                
 	            </nav>
 	        </div>
