--- a/app/views/learnaward.html
+++ b/app/views/learnaward.html
@@ -36,7 +36,7 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptScore">Score</label>
 			<div class="col-sm-10">
-				<input type="number" id="iptScore" ng-readonly="isReadonly" ng-model="Score"></input>
+				<input type="text" id="iptScore" ng-readonly="isReadonly" ng-model="Score"></input>
 			</div>
 		</div>
 
