--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -47,15 +47,15 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptCurr">Currency:</label>
+                <label class="control-label col-sm-2">Currency:</label>
                 <div class="col-sm-10">
-                    <ui-select ng-model="DocumentHeader.Currency.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select ng-model="DocumentHeader.DocumentCurrency.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                         <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.name}}</ui-select-match>
-                        <ui-select-choices repeat="cur in AllCurrencies">
-                            <div ng-bind-html="cur.name | highlight: $select.search"></div>
+                        <ui-select-choices repeat="acur in AllCurrencies">
+                            <div ng-bind-html="acur.name | highlight: $select.search"></div>
                             <small>
-                                ID: {{cur.curr}} <br />
-                                Name: <span ng-bind-html="+cur.name | highlight: $select.search"></span>
+                                ID: {{acur.curr}} <br />
+                                Name: <span ng-bind-html="+acur.name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -63,9 +63,9 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptDocDate">Date</label>
+                <label class="control-label col-sm-2">Date</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentHeader.DocumentDate" is-open="isDateOpened"
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentHeader.DocumentTranDate" is-open="isDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
